# atframe_utils

./: .clang-format  .clang-tidy  .clang-tidy.light  .cmake-format.yaml  .codechecker.clang-tidy.args  .codechecker.skipfile  .codechecker.yaml  .flake8  .gcc-flags.json  .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  appveyor.yml  atframe_utils-config.cmake.in  cmake_dev.bat  cmake_dev.ps1  cmake_dev.sh  codecov.yml  lgtm.yml  libatframe_utils-config.cmake.in  requirements-python-dev.txt
.agents/skills/: README.md
.agents/skills/ai-agent-maintenance/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/: .cache-key  copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/skills/: README.md  build.md  testing.md
.github/workflows/: clang-tidy.yml  codeql.yml  iwyu.yml  main.yml  stale.yml
ci/: do_ci.ps1  do_ci.sh  enable_windows_long_path.ps1  enable_windows_long_path.reg  format.sh  install_iwyu.sh  parse_clang_tidy_warnings.py
include/algorithm/: Hash.h  MixedInt.h  README.md  base64.h  bit.h  compression.h  crc.h  crypto_cipher.h  crypto_dh.h  crypto_hmac.h  hash.h  mixed_int.h  murmur_hash.h  sha.h  xxtea.h
include/cli/: cmd_option.h  cmd_option_bind.h  cmd_option_bind_param_list.h  cmd_option_bindt_base.h  cmd_option_bindt_cc.h  cmd_option_bindt_mf_cc.h  cmd_option_list.h  cmd_option_phoenix.h  cmd_option_string.h  cmd_option_value.h  shell_font.h
include/common/: compiler_message.h  demangle.h  file_system.h  platform_compat.h  string_oprs.h
include/config/: atframe_utils_build_feature.h.in  compile_optimize.h  compiler_features.h  ini_loader.h
include/config/compiler/: migrate_prefix.h  migrate_suffix.h  protobuf_prefix.h  protobuf_suffix.h  template_prefix.h  template_suffix.h
include/data_structure/: finite_state_machine.h  lock_free_array.h
include/design_pattern/: nomovable.h  noncopyable.h  result_type.h  singleton.h
include/distributed_system/: transaction_client.h  transaction_common_defs.h  transaction_coordinator.h  transaction_node.h  wal_client.h  wal_common_defs.h  wal_object.h  wal_publisher.h  wal_subscriber.h
include/gsl/: select-gsl.h
include/lock/: atomic_int_type.h  atomic_int_type_msvc_impl.h  lock_holder.h  seq_alloc.h  spin_lock.h  spin_rw_lock.h
include/log/: LogHandlerFilesystem.h  LogWrapper.h  LuaLogAdaptor.h  log_formatter.h  log_sink_file_backend.h  log_sink_syslog_backend.h  log_stacktrace.h  log_wrapper.h  lua_log_adaptor.h
include/mem_pool/: lru_map.h  lru_object_pool.h
include/memory/: allocator_ptr.h  allocator_traits.h  lru_map.h  lru_object_pool.h  rc_ptr.h
include/network/: http_content_type.h  http_request.h
include/nostd/: function_ref.h  nullability.h  string_view.h  type_traits.h  utility.h  utility_data_size.h  utility_sequence.h
include/random/: RandomGenerator.h  RandomMTCore.h  RandomXorCombineCore.h  UUIDGenerator.h  random_generator.h  random_mt_core.h  random_xor_combine_core.h  random_xoshiro_core.h  uuid_generator.h
include/std/: README.md  array.h  atomic.h  chrono.h  explicit_declare.h  foreach.h  functional.h  intrusive_ptr.h  ref.h  smart_ptr.h  static_assert.h  thread.h  tuple.h  utility.h
include/std/type_traits/: const_common.h  is_base_of_impl.h  is_convertible_impl.h  is_floating_point_impl.h  is_integral_impl.h  is_reference_impl.h  is_union_impl.h  is_xxx_impl.h  (+2 more)
include/string/: TQueryString.h  ac_automation.h  string_format.h  tquerystring.h  utf8_char_t.h
include/time/: jiffies_timer.h  time_utility.h
project/bash/: iconv_run.sh
project/cmake/: CompilerOption.cmake  FetchToolset.cmake  FindPlatform.cmake  GSLSupport.cmake  ProjectBuildOption.cmake  ProjectTools.cmake  TargetOption.cmake  modern_cxx_features_checking.cxx
sample/: CMakeLists.txt  Sample.cpp  cmd_option_bind_obj.h  cmd_option_caseignore_bind.h  cmd_option_delay_bind.h  cmd_option_main.cpp  config.ini  sample.cpp  test.ini
src/algorithm/: base64.cpp  compression.cpp  crc.cpp  crypto_cipher.cpp  crypto_dh.cpp  crypto_hmac.cpp  murmur_hash.cpp  sha.cpp  xxtea.c  xxtea.cpp
src/cli/: cmd_option_list.cpp  cmd_option_value.cpp  shell_font.cpp
src/common/: demangle.cpp  demangle_cxx_abi.cpp  demangle_windows.cpp  file_system.cpp  platform_compat.cpp  string_oprs.cpp
src/config/: ini_loader.cpp
src/log/: LogHandlerFilesystem.cpp  LogWrapper.cpp  LuaLogAdaptor.cpp  log_configure.cmake  log_formatter.cpp  log_sink_file_backend.cpp  log_sink_syslog_backend.cpp  log_stacktrace.cpp  log_wrapper.cpp  lua_log_adaptor.cpp
src/mem_pool/: lru_object_pool.cpp
src/memory/: lru_object_pool.cpp  rc_ptr.cpp
src/network/: http_content_type.cpp  http_request.cpp
src/random/: uuid_generator.cpp
src/string/: TQueryString.cpp  tquerystring.cpp
src/time/: time_utility.cpp
test/: .clang-tidy  CMakeLists.txt  test.build_bin.cmake  test.macro.cmake  test.utils-macro.cmake
test/app/: main.cpp
test/case/: ForeachTest.cpp  LRUObjectPoolTest.cpp  LockTest.cpp  MixedIntTest.cpp  RandomTest.cpp  SingletonTest.cpp  ac_automation_test.cpp  algorithm_bit_test.cpp  atomic_int_test.cpp  base64_test.cpp  bit_test.cpp  compression_test.cpp  crc_test.cpp  crypto_cipher_test.cpp  crypto_dh_test.cpp  crypto_hmac_test.cpp  demangle_test.cpp  evptests.txt  file_system_test.cpp  foreach_test.cpp  function_ref_test.cpp  gsl_test.cpp  ini_loader_test.cpp  intrusive_ptr_test.cpp  lock_test.cpp  log_formatter_test.cpp  log_sink_file_backend_test.cpp  log_stacktrace_test.cpp  lru_map_test.cpp  lru_object_pool_test.cpp  mixed_int_test.cpp  murmur_hash_test.cpp  nostd_test.cpp  platform_compat_test.cpp  random_test.cpp  rc_ptr_test.cpp  result_type_test.cpp  sha_test.cpp  shell_font_test.cpp  singleton_test.cpp  (+10 more)
test/frame/: shell_font.cpp  shell_font.h  test_case_base.cpp  test_case_base.h  test_macros.h  test_manager.cpp  test_manager.h
test/resource/: test-dhparam.pem
tools/: CMakeLists.txt  Invoke-Environment.ps1  conv_to_utf8.py  format.ps1  format.sh  valgrind-memcheck.sh
tools/uuidgen/: CMakeLists.txt  uuidgen.cpp
(+29 files in other folders)
